--- a/views/index.html
+++ b/views/index.html
@@ -87,6 +87,22 @@ $ git push</pre>
                 <h3>Command Line</h3>
                 <p>With the <a href="http://docs.openshift.org/latest/cli_reference/overview.html">OpenShift command line interface</a> (CLI), you can create applications and manage projects from a terminal.</p>
 
+                <h2>Request information</h2>
+                <p>Page view count:
+                <% if (pageCountMessage) { %>
+                   <span class="code" id="count-value"><%= pageCountMessage %></span>
+                   </p>
+                    <div class="code"><h3>database Info:</h3>
+                      <table style='margin-left: 20px'>
+                          <tr><td>Type:</td><td><%= dbInfo.type %></td></tr>
+                          <tr><td>URL:</td><td><%= dbInfo.url %></td></tr>
+                      </table>
+                    </div>
+                <% } else { %>
+                   <span class="code" id="count-value">No database configured</span>
+                   </p>
+                <%} %>
+
           </section>
         </div>
 
