fixed the copyright and service names used

--- a/views/index.html
+++ b/views/index.html
@@ -114,7 +114,7 @@ $ git push</pre>
 </main>
 
 <footer role="contentinfo">
-  <div class="copyright">Copyright &copy; 1996-2016 the members of #B4mad - Licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">a creative commons licence</a></div>
+  <div class="copyright">Copyright &copy; 2016 the members of #B4mad - Licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">a creative commons licence</a></div>
 </footer>
 
 </div>
